Advanced Table: Scrollbar none scss fixes

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -39,7 +39,7 @@
       }
 
       -ms-overflow-style: none !important;
-      scrollbar-width: thin !important;
+      scrollbar-width: thin;
       scrollbar-color: #00000033 transparent !important;
   }
 
